--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="">
             <div class="image-container">
-                <img src="image/home.jpg" alt="Home Image" class="featured-image">
+                <img src="image/home-.jpg" alt="Home Image" class="featured-image">
             </div>
             
             <!-- <h2>About this project</h2>
