--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple HTML Project</title>
+    <title>Đại Nhật Vegan</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <main>
         <section class="">
             <div class="image-container">
-                <img src="image/home-.jpg" alt="Home Image" class="featured-image">
+                <img src="image/Home.jpg" alt="Home Image" class="featured-image">
             </div>
             
             <!-- <h2>About this project</h2>
