--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  </header> -->
     
     <main>
-        <section class="">
+        <section class="container-1440">
             <div class="image-container">
                 <img src="image/Home.jpg" alt="Home Image" class="featured-image">
             </div>
