--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <h1>Welcome to My Simple HTML Project</h1>
  </header> -->
     
-    <main>
+    <main style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <section class="container-1440">
             <div class="image-container">
                 <img src="image/Home.jpg" alt="Home Image" class="featured-image">
