--- a/danh-sach-cua-hang.html
+++ b/danh-sach-cua-hang.html
@@ -3,28 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đại Nhật Vegan</title>
+    <title>Tương Cà Đại Nhật • Đại Nhật Vegan</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">    
 </head>
 <body>
-    <!-- <header>
-         <h1>Welcome to My Simple HTML Project</h1>
- </header> -->
     
-    <main style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <main>
         <section class="container-1440">
             <div class="image-container">
-                <img src="image/Home.jpg" alt="Home Image" class="featured-image">
+                <img src="image/Location.jpg" alt="Home Image" class="featured-image">
             </div>                   
         </section>
     </main>
-    
-    <!-- <footer>
-        <p>&copy; 2023 Simple HTML Project</p>
-    </footer> -->
 
     <script src="js/script.js"></script>
 </body>
