--- a/lien-he.html
+++ b/lien-he.html
@@ -7,25 +7,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">    
 </head>
 <body>
-    <!-- <header>
-         <h1>Welcome to My Simple HTML Project</h1>
- </header> -->
+ 
     
-    <main style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+    <main>
         <section class="container-1440">
             <div class="image-container">
-                <img src="image/Home.jpg" alt="Home Image" class="featured-image">
+                <div class="error-404">
+                    <h1>Thông báo</h1>
+                    <h2>Trang đang được cập nhật</h2>
+                    <p>Xin lỗi, trang này hiện đang trong quá trình cập nhật.</p>
+                    <a href="index.html" class="button">Về trang chủ</a>
+                </div>
             </div>                   
         </section>
     </main>
-    
-    <!-- <footer>
-        <p>&copy; 2023 Simple HTML Project</p>
-    </footer> -->
-
+ 
     <script src="js/script.js"></script>
 </body>
 </html>
