--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -12,17 +12,14 @@
 <body>
  
     
-    <main>
+    <main style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <section class="container-1440">
             <div class="image-container">
-                <div class="error-404">
-                    <h2>Trang đang được cập nhật</h2>
-                    <p>Xin lỗi, trang này hiện đang trong quá trình cập nhật.</p>
-                    <a href="index.html" class="button">Về trang chủ</a>
-                </div>
+                <img src="image/About us.jpg" alt="Home Image" class="featured-image">
             </div>                   
         </section>
     </main>
+    
  
     <script src="js/script.js"></script>
 </body>
