--- a/lien-he.html
+++ b/lien-he.html
@@ -11,16 +11,11 @@
 </head>
 <body>
  
-    
-    <main>
+   
+    <main style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
         <section class="container-1440">
             <div class="image-container">
-                <div class="error-404">
-                    <h1>Thông báo</h1>
-                    <h2>Trang đang được cập nhật</h2>
-                    <p>Xin lỗi, trang này hiện đang trong quá trình cập nhật.</p>
-                    <a href="index.html" class="button">Về trang chủ</a>
-                </div>
+                <img src="image/Contact us.jpg" alt="Home Image" class="featured-image">
             </div>                   
         </section>
     </main>
