--- a/chi-tiet-san-pham.html
+++ b/chi-tiet-san-pham.html
@@ -17,7 +17,7 @@
     <main>
         <section class="container-1440">
             <div class="image-container">
-                <img src="image/Single-Product.jpg" alt="Home Image" class="featured-image">
+                <img src="image/Single Product.jpg" alt="Home Image" class="featured-image">
             </div>                   
         </section>
     </main>
